[package]
name = "yellowstone-vixen"
description = "An all-in-one consumer runtime library for Yellowstone"
version = "0.5.0"
# authors = ["TODO"]
edition = "2021"
license = "MIT"
repository = "https://github.com/rpcpool/yellowstone-vixen"
readme = "./../../README.md"

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true, default-features = false, features = [
  "env",
  "derive",
  "std",
] }
futures-channel = { workspace = true, features = ["sink"] }
futures-util = { workspace = true, features = ["sink"] }
opentelemetry = { workspace = true, features = ["metrics"], optional = true }
prometheus = { workspace = true, features = ["push"], optional = true }
serde = { workspace = true, features = ["derive"] }
smallvec = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
topograph = { workspace = true, features = ["tokio"] }
tracing = { workspace = true }
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
yellowstone-vixen-core = { workspace = true }
rustls = { workspace = true, features = ["aws-lc-rs"] }

[features]
default = []
opentelemetry = ["dep:opentelemetry"]
prometheus = ["dep:prometheus"]
