[package]
name = "yellowstone-vixen"
description = "An all-in-one consumer runtime library for Yellowstone"
version = "0.5.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "./../../README.md"


[dependencies]
async-trait = { workspace = true }
clap = { workspace = true, features = [
  "env",
  "derive",
  "std",
] }
futures-channel = { workspace = true, features = ["sink"] }
futures-util = { workspace = true, features = ["sink"] }
opentelemetry = { workspace = true, features = ["metrics"], optional = true }
prometheus = { workspace = true, features = ["push"], optional = true }
serde = { workspace = true, features = ["derive"] }
smallvec = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
topograph = { workspace = true, features = ["tokio"] }
tracing = { workspace = true }
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
yellowstone-vixen-core = { workspace = true }
rustls = { workspace = true, features = ["aws-lc-rs"] }

[features]
default = []
opentelemetry = ["dep:opentelemetry"]
prometheus = ["dep:prometheus"]
