[package]
name = "yellowstone-vixen-slot-parser"
description = "Vixen slot parser."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "./../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yellowstone-vixen-core = { workspace = true }

[dev-dependencies]
yellowstone-vixen-mock = { workspace = true }
tokio.workspace = true

[features]
default = []
