[package]
name = "solana-accounts-rpc-source"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "signal"] }
tracing = "0.1.40"
solana-client = "2.2"
solana-commitment-config = "2.2"
solana-pubkey = { version = "2.2", features = ["serde", "borsh", "curve25519"] }
solana-account-decoder-client-types = "2.2"

yellowstone-vixen = { workspace = true }
yellowstone-vixen-core = { workspace = true }
yellowstone-grpc-proto = { workspace = true }

[features]
