[package]
name = "yellowstone-vixen-solana-rpc-source"
version.workspace = true
edition.workspace = true
description = "Solana RPC source for the Yellowstone Vixen"
repository.workspace = true
license.workspace = true
authors.workspace = true
readme = "./../../README.md"

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
tracing = { workspace = true }
solana-client = { workspace = true }
solana-commitment-config = { workspace = true }
solana-pubkey = { workspace = true, features = ["serde", "borsh", "curve25519"] }
solana-account-decoder-client-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
clap = { workspace = true, features = ["derive", "cargo", "wrap_help"] }
yellowstone-vixen = { workspace = true }
yellowstone-vixen-core = { workspace = true }
yellowstone-grpc-proto = { workspace = true }

[features]
