[package]
name = "yellowstone-vixen-solana-snapshot-source"
version.workspace = true
edition.workspace = true
description = "Run a Solana snapshot through Yellowstone Vixen"
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "./../../README.md"

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
tracing = { workspace = true }
futures-util = { workspace = true, features = ["sink"] }
yellowstone-vixen = { workspace = true }
yellowstone-vixen-core = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
yellowstone-grpc-client = { workspace = true }
toml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
solana-pubkey = { workspace = true, features = ["curve25519", "borsh"] }
solana-accounts-db = { workspace = true }
tempfile = { workspace = true }
zstd = { workspace = true }
tar = { workspace = true }
solana-account = { workspace = true }
clap = { workspace = true, features = ["derive", "cargo", "wrap_help"] }
