[package]
name = "yellowstone-vixen-spl-token-extensions-parser"
description = "Vixen program parsers for spl token exetensions parser."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "./../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
spl-pod = { workspace = true }
spl-token-2022 = { workspace = true, features = ["no-entrypoint"] }
spl-type-length-value = { workspace = true }
spl-token-group-interface = { workspace = true }
spl-token-metadata-interface = { workspace = true }
solana-program-pack = { workspace = true }
solana-program-error = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
yellowstone-vixen-core = { workspace = true }
yellowstone-vixen-parser = { workspace = true }
yellowstone-vixen-spl-token-parser = { workspace = true }
thiserror.workspace = true
bs58.workspace = true
bytemuck = { workspace = true }
borsh = { workspace = true }

[dev-dependencies]
yellowstone-vixen-mock = { workspace = true }
tokio.workspace = true

[features]
default = []
