[package]
name = "yellowstone-vixen-stake-pool-parser"
version = "0.2.0"
edition = "2021"
description = "Vixen program parser for SPL Stake Pool"
license = "MIT"
repository = "https://github.com/rpcpool/yellowstone-vixen"

[dependencies]
spl-pod = { version = "0.3.0" }
spl-stake-pool = { version = "2.0.1", features = ["no-entrypoint"] }
spl-token = { version = "6.0.0", optional = true }
spl-token-2022 = { version = "4.0.0", optional = true }
spl-type-length-value = { version = "0.5.0", optional = true }
spl-token-group-interface = { version = "0.3.0", optional = true }
spl-token-metadata-interface = { version = "0.4.0", optional = true }
yellowstone-grpc-proto = { workspace = true }
yellowstone-vixen-core = { workspace = true }
yellowstone-vixen-proto = { workspace = true, features = [
  "parser",
], optional = true }
thiserror.workspace = true
borsh.workspace = true
bs58.workspace = true

[dev-dependencies]
yellowstone-vixen-mock = { workspace = true }
tokio.workspace = true
