[package]
name = "yellowstone-vixen-stake-pool-parser"
version = "0.2.1"
edition = "2021"
description = "Vixen program parser for SPL Stake Pool"
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
spl-pod = { workspace = true }
spl-stake-pool = { workspace = true, features = ["no-entrypoint"] }
spl-token = { workspace = true, optional = true }
spl-token-2022 = { workspace = true, optional = true }
spl-type-length-value = { workspace = true, optional = true }
spl-token-group-interface = { workspace = true, optional = true }
spl-token-metadata-interface = { version = "0.4.0", optional = true }
yellowstone-grpc-proto = { workspace = true }
yellowstone-vixen-core = { workspace = true }
yellowstone-vixen-proto = { workspace = true, features = [
  "parser",
], optional = true }
thiserror.workspace = true
borsh.workspace = true
bs58.workspace = true

[dev-dependencies]
yellowstone-vixen-mock = { workspace = true }
tokio.workspace = true
