[package]
name = "yellowstone-vixen-stake-pool-parser"
version.workspace = true
edition.workspace = true
description = "Vixen program parser for SPL Stake Pool"
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
spl-pod = { workspace = true }
spl-stake-pool = { workspace = true, features = ["no-entrypoint"] }
yellowstone-grpc-proto = { workspace = true }
yellowstone-vixen-core = { workspace = true }
yellowstone-vixen-parser = { workspace = true }
yellowstone-vixen-proto = { workspace = true, features = [
  "parser",
], optional = true }
thiserror.workspace = true
borsh.workspace = true
bs58.workspace = true
prost = { workspace = true }
prost-types = { workspace = true }

[dev-dependencies]
yellowstone-vixen-mock = { workspace = true }
tokio.workspace = true
