[package]
name = "yellowstone-vixen-stream"
description = "A gRPC server for subscribing to parsed Yellowstone events"
version = "0.0.0"
# authors = ["TODO"]
edition = "2021"
license = "MIT"
repository = "https://github.com/rpcpool/yellowstone-vixen"
readme = "./../../README.md"

[dependencies]
async-trait = "0.1.88"
clap = { version = "4.5.4", default-features = false, features = [
  "env",
  "derive",
  "std",
] }
futures-channel = { version = "0.3.30", features = ["sink"] }
futures-util = { version = "0.3.30", features = ["sink"] }
opentelemetry = { version = "0.24.0", features = ["metrics"], optional = true }
pin-project-lite = { version = "0.2.14" }
prometheus = { version = "0.14.0", features = ["push"], optional = true }
toml = "0.8.12"
serde = { version = "1.0.198", features = ["derive"] }
smallvec = "1.13.2"
thiserror = "1.0.64"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "signal"] }
topograph = { version = "0.4.0", features = ["tokio"] }
tracing = "0.1.40"
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
yellowstone-vixen-core = { workspace = true }
yellowstone-vixen = { workspace = true }
yellowstone-vixen-yellowstone-grpc-source = { workspace = true }
yellowstone-vixen-proto = { workspace = true, features = ["stream"] }

[features]
opentelemetry = ["dep:opentelemetry"]
prometheus = ["dep:prometheus"]
