[package]
name = "yellowstone-vixen-stream"
description = "A gRPC server for subscribing to parsed Yellowstone events"
version = "0.1.0"
# authors = ["TODO"]
edition = "2021"
repository.workspace = true
authors.workspace = true
license.workspace = true
readme = "./../../README.md"

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true, features = [
  "env",
  "derive",
  "std",
] }
futures-channel = { workspace = true, features = ["sink"] }
futures-util = { workspace = true, features = ["sink"] }
pin-project-lite = { workspace = true }
prometheus = { workspace = true, features = ["push"], optional = true }
toml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
smallvec = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
topograph = { workspace = true, features = ["tokio"] }
tracing = { workspace = true }
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
yellowstone-vixen-core = { workspace = true }
yellowstone-vixen = { workspace = true }
yellowstone-vixen-yellowstone-grpc-source = { workspace = true }
yellowstone-vixen-proto = { workspace = true, features = ["stream"] }

[features]
default = []
prometheus = ["dep:prometheus", "yellowstone-vixen/prometheus"]
