[package]
name = "yellowstone-vixen-streams"
description = "A one-stop-shop library for using Vixen to generate streams of parsed program data"
# authors = ["TODO"]
version = "0.0.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/rpcpool/yellowstone-vixen"

[dependencies.vixen]
package = "yellowstone-vixen"
version = "0.0.0"
path = "../runtime"
default-features = false

[features]
default = ["opentelemetry"]
opentelemetry = ["vixen/opentelemetry"]
prometheus = ["vixen/prometheus"]
